Fix for masthead img spacing on lg ff

--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ mark,
 
 .img-fluid {
   max-width: 100%;
-  max-height: auto;
+  height: auto;
 }
 
 .img-thumbnail {
@@ -10121,14 +10121,14 @@ img::-moz-selection {
 header.masthead {
   max-height: 35em;
   text-align: center;
-  background: url("../assets/img/map-image.png") , linear-gradient(to bottom, rgba(24, 37, 92, 0.6) 0%, rgba(177, 62, 62, 0.6) 100%);
+  background: linear-gradient(to bottom, rgba(24, 37, 92, 0.6) 0%, rgba(177, 62, 62, 0.8) 100%);
   /* background-image: url("../assets/img/BigBanner.png"); */
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
 }
-@media (min-width: 1440px) {
+@media (min-width:1460px) {
   #hide-img {
     height: 35rem;
   }
@@ -10150,11 +10150,11 @@ header.masthead .masthead-heading {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-@media (min-width: 390px) {
-  /* header.masthead {
+/* @media (min-width: 1460px) {
+  header.masthead {
   
-    padding-bottom: 12.5rem; */
-  }
+    padding-bottom: 12.5rem;
+  } */
   header.masthead .masthead-subheading {
     font-size: 2.25rem;
     font-style: italic;
@@ -10501,4 +10501,5 @@ section#contact form#contactForm :-ms-input-placeholder {
 .hideit {
   visibility: hidden;
   opacity: 0;
+}
 }
